@@ -30,7 +30,7 @@ public class FilterSpec {
     private final String className;
     private final Map<String, String> parameters;
 
-    private transient Class clazz;
+    private transient Class<?> clazz;
 
     // no-arg constructor needed for JSON deserialization
     @SuppressWarnings("unused")
@@ -68,10 +68,10 @@ public class FilterSpec {
     public Filter buildInstance()
             throws IllegalArgumentException {
 
-        final Class clazz = getClazz();
+        final Class<?> clazz = getClazz();
         final Object instance;
         try {
-            instance = clazz.newInstance();
+            instance = clazz.getDeclaredConstructor().newInstance();
         } catch (final Exception e) {
             throw new IllegalArgumentException("failed to create instance of filter class '" + className + "'", e);
         }
@@ -111,7 +111,7 @@ public class FilterSpec {
         return new FilterSpec(filter.getClass().getName(), filter.toParametersMap());
     }
 
-    private Class getClazz() throws IllegalArgumentException {
+    private Class<?> getClazz() throws IllegalArgumentException {
         if (clazz == null) {
             if (className == null) {
                 throw new IllegalArgumentException("no className defined for filter spec");
